# cpp-project-template

./: .clang-format  README.md  meson.build  runme
include/[[[project_name]]]/: meson.build
lib/: [[[project_name]]].cpp  meson.build
src/: main.cpp  meson.build
tests/: meson.build
tests/hello/: test.cpp
